added links, checkbox, improve cards, added alt

--- a/ayuda.html
+++ b/ayuda.html
@@ -23,7 +23,7 @@
     <div class="panel" data-color="light-red">
         <h2>¡Únete a la guerrilla de Conciencia Afro!</h2>
         <div class="card-ayuda bg-red">
-            <img src="img/nzinga-espacio-afro.png" alt="">
+            <img src="img/nzinga-espacio-afro.png" alt="Nzinga">
             <div>
                 <div>
                     <ul>
@@ -44,7 +44,7 @@
     <div class="panel" data-color="light-purple">
         <h2>¡Únete a la guerrilla de Conciencia Afro!</h2>
         <div class="card-ayuda bg-purple">
-            <img src="img/cespedes-espacio-afro.png" alt="">
+            <img src="img/cespedes-espacio-afro.png" alt="Cespedes">
             <div>
                 <div>
                     <ul>
@@ -65,7 +65,7 @@
     <div class="panel" data-color="light-green">
         <h2>¡Únete a la guerrilla de Conciencia Afro!</h2>
         <div class="card-ayuda bg-green">
-            <img src="img/sankara-espacio-afro.png" alt="">
+            <img src="img/sankara-espacio-afro.png" alt="Sankara">
             <div>
                 <div>
                     <ul>
