--- a/conocenos.html
+++ b/conocenos.html
@@ -46,67 +46,87 @@
         <!-- Card 1 -->
         <div class="card bg-yellow">
             <div>
-                <span class="bg-light-red">2016 -  Act</span>
-                <span>Proyecto <i class="fa-solid fa-circle"></i></span>
+                <div>
+                    <span class="bg-light-red">2016 -  Act</span>
+                    <span>Proyecto <i class="fa-solid fa-circle"></i></span>
+                </div>
+                <div>
+                    <p>El festival nació con la idea de hacer visible las voces, los sueños y las realidades de las personas africanas y afrodescendientes que viven en España a través de sus expresiones culturales. Este festival, del cual se han celebrado ya seis ediciones (2016, 2017, 2018, 2019, 2021 y 2022), aúna política, estética, cultura, poética, música, baile, emprendimiento social, pedagogía, entre otras muchas cosas.</p>
+                    <h4>FESTIVAL CONCIENCIA AFRO</h4>
+                </div>
             </div>
             <div>
-                <p>El festival nació con la idea de hacer visible las voces, los sueños y las realidades de las personas africanas y afrodescendientes que viven en España a través de sus expresiones culturales. Este festival, del cual se han celebrado ya seis ediciones (2016, 2017, 2018, 2019, 2021 y 2022), aúna política, estética, cultura, poética, música, baile, emprendimiento social, pedagogía, entre otras muchas cosas.</p>
-                <h4>FESTIVAL CONCIENCIA AFRO</h4>
+                <a href="#"><img src="img/arrow-right.svg" alt="Flecha derecha"></a>
             </div>
-            <a href="#"><img src="img/arrow-right.svg" alt="Flecha derecha"></a>
         </div>
         <!-- Card 2 -->
         <div class="card bg-red">
             <div>
-                <span class="bg-light-purple">2017 - Act</span>
-                <span>Proyecto <i class="fa-solid fa-circle"></i></span>
+                <div>
+                    <span class="bg-light-purple">2017 - Act</span>
+                    <span>Proyecto <i class="fa-solid fa-circle"></i></span>
+                </div>
+                <div>
+                    <p>La biblioteca se creó en el año 2017 bajo tres ejes: aprender, crear y disfrutar.</p>
+                    <p>El objetivo principal del proyecto ha sido el de conectar la producción cultural y de conocimiento antirracista de otras latitudes con la que se está dando en nuestro país, para generar espacios donde estimular el aprendizaje comunitario y la capacidad creativa.</p>
+                    <h4>Biblioteca de creación</h4>
+                </div>
             </div>
             <div>
-                <p>La biblioteca se creó en el año 2017 bajo tres ejes: aprender, crear y disfrutar.</p>
-                <p>El objetivo principal del proyecto ha sido el de conectar la producción cultural y de conocimiento antirracista de otras latitudes con la que se está dando en nuestro país, para generar espacios donde estimular el aprendizaje comunitario y la capacidad creativa.</p>
-                <h4>Biblioteca de creación</h4>
+                <a href="#"><img src="img/arrow-right.svg" alt="Flecha derecha"></a>
             </div>
-            <a href="#"><img src="img/arrow-right.svg" alt="Flecha derecha"></a>
         </div>
         <!-- Card vacía -->
         <div class="card"></div>
         <!-- Card 3 -->
         <div class="card bg-light-red">
             <div>
-                <span class="bg-green">2016 - 2019</span>
-                <span>Proyecto <i class="fa-solid fa-circle"></i></span>
+                <div>
+                    <span class="bg-green">2016 - 2019</span>
+                    <span>Proyecto <i class="fa-solid fa-circle"></i></span>
+                </div>
+                <div>
+                    <p>A-fronterizxs fue el equipo de educación del Espacio Conciencia Afro. Este proyecto centraba su trabajo en el impulso de acciones de co-aprendizaje en torno a África y su diáspora, la afrodescendencia y otras comunidades racializadas y diversas. Del trabajo realizado por este grupo nació la publicación “A-fronterizxs: un proyecto de co- aprendizaje” (2018). En la actualidad nuestro proyecto favorito es el Campamento Urbano.</p>
+                    <h4>Equipo de educación</h4>
+                </div>
             </div>
             <div>
-                <p>A-fronterizxs fue el equipo de educación del Espacio Conciencia Afro. Este proyecto centraba su trabajo en el impulso de acciones de co-aprendizaje en torno a África y su diáspora, la afrodescendencia y otras comunidades racializadas y diversas. Del trabajo realizado por este grupo nació la publicación “A-fronterizxs: un proyecto de co- aprendizaje” (2018). En la actualidad nuestro proyecto favorito es el Campamento Urbano.</p>
-                <h4>Equipo de educación</h4>
+                <a href="#"><img src="img/arrow-right.svg" alt="Flecha derecha"></a>
             </div>
-            <a href="#"><img src="img/arrow-right.svg" alt="Flecha derecha"></a>
         </div>
         <!-- Card 4 -->
         <div class="card bg-light-green">
             <div>
-                <span class="bg-light-purple">2018 - 2020</span>
-                <span>Proyecto <i class="fa-solid fa-circle"></i></span>
+                <div>
+                    <span class="bg-light-purple">2018 - 2020</span>
+                    <span>Proyecto <i class="fa-solid fa-circle"></i></span>
+                </div>
+                <div>
+                    <p>Este espacio se creó con la idea de impulsar el autoconocimiento de la genealogía de mujeres afro en el Estado español, el autoconocimiento de feminismos afrodescendientes y la conexión (inter) generacional de las mujeres/colectivos que vienen trabajando en la comunidad.</p>
+                    <h4>Espacio Afrofeminista</h4>
+                </div>
             </div>
             <div>
-                <p>Este espacio se creó con la idea de impulsar el autoconocimiento de la genealogía de mujeres afro en el Estado español, el autoconocimiento de feminismos afrodescendientes y la conexión (inter) generacional de las mujeres/colectivos que vienen trabajando en la comunidad.</p>
-                <h4>Espacio Afrofeminista</h4>
+                <a href="#"><img src="img/arrow-right.svg" alt="Flecha derecha"></a>
             </div>
-            <a href="#"><img src="img/arrow-right.svg" alt="Flecha derecha"></a>
         </div>
         <!-- Card Vacía -->
         <div class="card"></div>
         <!-- Card 5 -->
         <div class="card bg-light-purple">
             <div>
-                <span class="bg-purple">2016 - Act</span>
-                <span>Proyecto <i class="fa-solid fa-circle"></i></span>
+                <div>
+                    <span class="bg-purple">2016 - Act</span>
+                    <span>Proyecto <i class="fa-solid fa-circle"></i></span>
+                </div>
+                <div>
+                    <p>La Revista Digital Negrxs fue uno de los primeros proyectos que se crearon en Espacio Afro. Esta iniciativa nació con la idea de ser un espacio colaborativo de la comunidad negra, africana y afrodescendiente desde el cual sostener una conversación pausada y abierta desde los relatos y narrativas que se estaban (están) creando alrededor de la identidad colectiva y heterogénea de la comunidad Afro.</p>
+                    <h4>Revista Digital “Negrxs”</h4>
+                </div>
             </div>
             <div>
-                <p>La Revista Digital Negrxs fue uno de los primeros proyectos que se crearon en Espacio Afro. Esta iniciativa nació con la idea de ser un espacio colaborativo de la comunidad negra, africana y afrodescendiente desde el cual sostener una conversación pausada y abierta desde los relatos y narrativas que se estaban (están) creando alrededor de la identidad colectiva y heterogénea de la comunidad Afro.</p>
-                <h4>Revista Digital “Negrxs”</h4>
+                <a href="#"><img src="img/arrow-right.svg" alt="Flecha derecha"></a>
             </div>
-            <a href="#"><img src="img/arrow-right.svg" alt="Flecha derecha"></a>
         </div>
     </section>
     <!-- Fin Sección Cards -->
@@ -150,7 +170,7 @@
                 <h5 class="big-text">Rubén H. Bermúdez</h5>
                 <p>Creativo. Es autor del libro ‘Y tú, ¿por qué eres negro? (2017) y de la película ‘A todos nos gusta el plátano’ (2021). Ahora dice que quiere hacer un videojuego.</p>
             </div>
-        <img src="img/yeison-f-garcia-lopez.png" alt="" class="hover-img">
+        <img src="img/yeison-f-garcia-lopez.png" alt="Yeison F García López" class="hover-img">
         </div>
         <!-- Fin Cards Equipo -->
     </section>
@@ -159,13 +179,13 @@
     <section class="main-section bg-light-purple">
         <!-- Sección con imagen -->
         <div class="section-img bg-purple">
-            <img src="img/gif-afro.gif" alt="Rellenar">
+            <img src="img/gif-afro.gif" alt="Imágenes del espacio afro">
         </div>
         <!-- Seccion con texto -->
         <div class="section-text">
             <h4>¿Quieres hacernos una propuesta?</h4>
             <p>¿Quieres proponer una actividad para el Centro? ¿te gustaría actuar en el Festival del próximo año? ¿quieres que vayamos a tu universidad, museo o colegio? ¿quieres alquilar el espacio? ¿quieres que colaboremos en alguna actividad?</p>
-            <a href="#" class="btn">Sí, tengo una idea</a>
+            <a href="contacto.html" class="btn">Sí, tengo una idea</a>
         </div>
     </section>
     <!-- Fin Sección Contacto -->
