--- a/contacto.html
+++ b/contacto.html
@@ -17,7 +17,6 @@
         
         <!-- Fin Logo -->
         <div> 
-            <!-- <img src="img/icon-menu.svg" alt="icono de hamburguesa"> -->
             <button id="btn_menu" class="btn_menu">
                 <span id="bar1"></span><span id="bar_middle"></span><span id="bar2"></span>
             </button>
@@ -36,12 +35,12 @@
         <!-- Sección con formulario -->
         <div class="section-form bg-purple">
             <form action=”#” method=”GET”>
-                <input type="text" placeholder="Nombre o cómo quieras que te llamen">
+                <input type="text" placeholder="Nombre ">
                 <input type="email" placeholder="Email">
                 <input type="text" name="" id="" placeholder="Sobre qué es la propuesta">
                 <input type="text" placeholder="Breve descripción de la propuesta">
                 <p class="legal-text">RESPONSABLE: Conciencia Afro. FINALIDAD PRINCIPAL: Vía de contacto con usuarios interesados. LEGITIMACIÓN: Consentimiento del interesado. DESTINATARIOS: No se cederán datos a terceros, salvo autorización expresa u obligación legal DERECHOS: Acceder, rectificar y suprimir los datos, portabilidad de los datos, limitación u oposición a su tratamiento, transparencia y derecho a no ser objeto de decisiones automatizadas. INFORMACIÓN ADICIONAL: Puede consultar la información adicional y detallada sobre nuestra Política de Privacidad y Aviso Legal.</p>
-                <label for="" class=""><input type="checkbox">Acepto la Política de Privacidad</label>
+                <label for=""><input type="checkbox" class="mycheck">Acepto la Política de Privacidad</label>
                 
                 <button class="btn">Enviar propuesta</button>
             </form>
