--- a/index.html
+++ b/index.html
@@ -56,13 +56,15 @@
     <section class="cards">
         <div class="card bg-green">
             <div>
-                <span class="bg-light-red">14-15 Oct</span>
-                <span>Evento <i class="fa-solid fa-circle"></i></span>
-            </div>
-            <img src="img/festival-conciencia-afro-espacio-afro.jpg" alt="">
-            <div>
-                <p>El Festival Conciencia Afro 2023 es un espacio para el encuentro, la afectividad y el pensamiento de la comunidad afro en España. Este año en colaboración con La Casa Encendida, que aúna política, estética, música, emprendimiento y pedagogía y en el que las personas protagonistas y organizadoras son parte de la propia comunidad residente en el contexto español.</p>
-                <h4>FESTIVAL CONCIENCIA AFRO 2023</h4>
+                <div>
+                    <span class="bg-light-red">14-15 Oct</span>
+                    <span>Evento <i class="fa-solid fa-circle"></i></span>
+                </div>
+                <img src="img/festival-conciencia-afro-espacio-afro.jpg" alt="Cartel Festival Conciencia Afro">
+                <div>
+                    <p>El Festival Conciencia Afro 2023 es un espacio para el encuentro, la afectividad y el pensamiento de la comunidad afro en España. Este año en colaboración con La Casa Encendida, que aúna política, estética, música, emprendimiento y pedagogía y en el que las personas protagonistas y organizadoras son parte de la propia comunidad residente en el contexto español.</p>
+                    <h4>FESTIVAL CONCIENCIA AFRO 2023</h4>
+                </div>
             </div>
             <div>
                 <a href="#"><img src="img/arrow-right.svg" alt="Flecha derecha"></a>
@@ -70,15 +72,19 @@
         </div>
         <div class="card bg-light-purple">
             <div>
-                <span class="bg-yellow">14-15 Oct</span>
-                <span>Actividad <i class="fa-solid fa-circle"></i></span>
+                <div>
+                    <span class="bg-yellow">14-15 Oct</span>
+                    <span>Actividad <i class="fa-solid fa-circle"></i></span>
+                </div>
+                <img src="img/performance-o-som-das-mortas-yola-balagan-espacio-afro.jpg" alt="Performance O som das Mortas de Yola Balagan">
+                <div>
+                    <p>Es una performance que retrata la muerte de cuerpos/mujeres negros provocada en muchos casos por la violencia de género, feminicidios, machismos, pero también es una reflexión sobre la educación que nos enseña defensa personal y sentirnos bien con nuestro propio cuerpo.</p>
+                    <h4>Performance 'O som das Mortas' de Yola Balagan</h4>
+                </div>
             </div>
-            <img src="img/performance-o-som-das-mortas-yola-balagan-espacio-afro.jpg" alt="Performance O som das Mortas de Yola Balagan">
             <div>
-                <p>Es una performance que retrata la muerte de cuerpos/mujeres negros provocada en muchos casos por la violencia de género, feminicidios, machismos, pero también es una reflexión sobre la educación que nos enseña defensa personal y sentirnos bien con nuestro propio cuerpo.</p>
-                <h4>Performance 'O som das Mortas' de Yola Balagan</h4>
+                <a href="#"><img src="img/arrow-right.svg" alt="Flecha derecha"></a>
             </div>
-            <a href="#"><img src="img/arrow-right.svg" alt="Flecha derecha"></a>
         </div>
     </section>
     <!-- Fin Sección Cards -->
@@ -95,13 +101,13 @@
     <section class="main-section bg-light-purple">
         <!-- Sección con imagen -->
         <div class="section-img bg-purple">
-            <img src="img/espacio_afro_plantas.jpeg" alt="Rellenar">
+            <img src="img/espacio_afro_plantas.jpeg" alt="Espacio Afro con plantas">
         </div>
         <!-- Seccion con texto -->
         <div class="section-text">
             <h4>¿Quieres hacernos una propuesta?</h4>
             <p>¿Quieres proponer una actividad para el Centro? ¿te gustaría actuar en el Festival del próximo año? ¿quieres que vayamos a tu universidad, museo o colegio? ¿quieres alquilar el espacio? ¿quieres que colaboremos en alguna actividad?</p>
-            <a href="#" class="btn">Sí, tengo una idea</a>
+            <a href="contacto.html" class="btn">Sí, tengo una idea</a>
         </div>
     </section>
     <!-- Fin Sección Contacto -->
