--- a/actividades.html
+++ b/actividades.html
@@ -33,7 +33,7 @@
         <div class="card-actividad">
             <!-- First Child -->
             <div>
-                <span>13 SEPT - 1 NOV<br>[MIÉRCOLES 19:30 - 20:30]</span>
+                <span>MIÉRCOLES 19:30 - 20:30</span>
                 <span><i class="fa-solid fa-location-pin"></i>Espacio Afro</span>
             </div>
             <!-- Last child -->
@@ -56,7 +56,7 @@
         <div class="card-actividad">
             <!-- First Child -->
             <div>
-                <span>13 SEPT - 15 NOV<br>[MIÉRCOLES 10:30 - 21:30]</span>
+                <span>MIÉRCOLES 20:30 - 21:30</span>
                 <span><i class="fa-solid fa-location-pin"></i>Espacio Afro</span>
             </div>
             <!-- Last child -->
@@ -79,7 +79,7 @@
         <div class="card-actividad">
             <!-- First Child -->
             <div>
-                <span>22 SEPT<br>[19:30 - 21:00]</span>
+                <span>22 SEPT [19:30 - 21:00]</span>
                 <span><i class="fa-solid fa-location-pin"></i>Espacio Afro</span>
             </div>
             <!-- Last child -->
@@ -92,7 +92,7 @@
                         </p>
                     </div>
                     <div>
-                        <span>Taquilla inversa</span>
+                        <span>Gratis</span>
                         <a href="#" class="btn">Añadir al calendario</a>
                     </div>
                 </div>
@@ -103,7 +103,7 @@
         <div class="card-actividad">
             <!-- First Child -->
             <div>
-                <span>23 SEPT<br>[19:30 - 22:00]</span>
+                <span>23 SEPT [19:30 - 22:00]</span>
                 <span><i class="fa-solid fa-location-pin"></i>Espacio Afro</span>
             </div>
             <!-- Last child -->
