--- a/resistencia.html
+++ b/resistencia.html
@@ -17,7 +17,6 @@
         
         <!-- Fin Logo -->
         <div> 
-            <!-- <img src="img/icon-menu.svg" alt="icono de hamburguesa"> -->
             <button id="btn_menu" class="btn_menu">
                 <span id="bar1"></span><span id="bar_middle"></span><span id="bar2"></span>
             </button>
@@ -30,7 +29,7 @@
         <div>
             <h1>RESISTENCIA AFROFRONTERIZA 2023</h1>
             <a href="#proyectos-resistencia" class="btn">Proyectos desarrollados</a>
-            <img src="img/residencia-espacio-afro.png" alt="">
+            <img src="img/residencia-espacio-afro.png" alt="Equipo Residencia Espacio Afro">
         </div>
         <div>
             <p>Un programa de creación en residencia que acompaña proyectos de creación artística que trabajan en torno a los conceptos de comunidad, cuerpo y memoria. El programa propone habitar lo afronterizo como un concepto colectivo a construir a partir de la experiencia del compartir juntas, tiempos de escucha, investigación, experimentación y vida.</p>
@@ -49,7 +48,7 @@
     <section class="main-section bg-light-purple" id="proyectos-resistencia">
         <!-- Sección con imagen -->
         <div class="section-img bg-purple">
-            <img src="img/residencia-espacio-afro-02-web.png" alt="Rellenar">
+            <img src="img/residencia-espacio-afro-02-web.png" alt="Abrazo en espacio afro">
         </div>
         <!-- Seccion con texto -->
         <div class="section-text">
