deleted content not used

--- a/conocenos.html
+++ b/conocenos.html
@@ -179,7 +179,7 @@
     <section class="main-section bg-light-purple">
         <!-- Sección con imagen -->
         <div class="section-img bg-purple">
-            <img src="img/gif-afro.gif" alt="Imágenes del espacio afro">
+            <img src="img/gif-conciencia-afro.gif" alt="Imágenes del espacio afro">
         </div>
         <!-- Seccion con texto -->
         <div class="section-text">
