Pop-up only show on home-page

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <title>Conciencia Afro</title>
 </head>
-<body>
+<body class="home-page">
     <!-- Header -->
     <header>
         <!-- Logo -->
