added comments, created variants padding

--- a/ayuda.html
+++ b/ayuda.html
@@ -5,21 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="icon" href="img/flavicon.ico" type="image/x-icon">
-
     <title>Únete</title>
 </head>
 <body>
-    
+    <!-- Sección de contenidos fijos mientras que los siguientes se permite el scroll -->
     <div class="fixed-section">
+        <!-- Primeros contenidos: esquinas de arriba (desktop) -->
         <div>
             <a href="index.html" class="logo"><img src="img/Logo-Conciencia-Afro.svg" alt="Logo-Conciencia-Afro"></a>
             <p class="text-right"><a href="mailto:hola@conciencia-afro.com">hola@conciencia-afro.com</a></p>
         </div>
+        <!-- Segundos contenidos: esquinas de abajo (desktop)-->
         <div>
             <p class="text-left">Espacio Afro es un proyecto comunitario y autogestionado que está saliendo adelante gracias a todas las personas que creyeron en él.</p>
             <h6 class="text-right">Guerrilla de Conciencia Afro</h6>
         </div>
     </div>
+    <!-- Secciones con colores al hacer scroll -->
+    <!-- Primera opción -->
     <div class="panel" data-color="light-red">
         <h2>¡Únete a la guerrilla de Conciencia Afro!</h2>
         <div class="card-ayuda bg-red">
@@ -41,6 +44,7 @@
         </div>
         <a href="#" class="btn">Suscribirme</a>
     </div>
+    <!-- Segunda opción -->
     <div class="panel" data-color="light-purple">
         <h2>¡Únete a la guerrilla de Conciencia Afro!</h2>
         <div class="card-ayuda bg-purple">
@@ -62,6 +66,7 @@
         </div>
         <a href="#" class="btn">Suscribirme</a>
     </div>
+    <!-- Tercera opción -->
     <div class="panel" data-color="light-green">
         <h2>¡Únete a la guerrilla de Conciencia Afro!</h2>
         <div class="card-ayuda bg-green">
@@ -83,6 +88,7 @@
         </div>
         <a href="#" class="btn">Suscribirme</a>
     </div>
+    <!-- Cuarta opción -->
     <div class="panel" data-color="yellow">
         <h2>¿Quieres hacer una donación puntual?</h2>
         <a href="#" class="btn">Donar</a>
