--- a/conocenos.html
+++ b/conocenos.html
@@ -25,13 +25,14 @@
     <!-- Fin Header -->
     <!-- Hero -->
     <section class="section-black">
+        <!-- Contenedor con título, imagen y anclas -->
         <div>
             <h1>Centro cultural <br>Conciencia Afro</h1>
             <a href="#proyectos" class="btn">proyectos</a>
             <a href="#equipo" class="btn">Equipo</a>
-            <img src="img/conciencia-afro-quienes-somos.png" alt="">
-            
+            <img src="img/conciencia-afro-quienes-somos.png" alt="Mujer hablando con micrófono">
         </div>
+        <!-- Contenedor con texto -->
         <div>
             <p>Conciencia-Afro es una propuesta artística, cultural y política centrada en reivindicar, celebrar y difundir nuestras realidades y nuestros conocimientos. Sí, en plural, puesto que tanto desde el continente africano como desde la diáspora, diseminada por todo el planeta, se generan culturas unidas por un cordón umbilical pero diferentes y propias. Nuestra organización lleva más de 6 años trabajando en el ámbito de la creación artística, el diseño de proyectos culturales y en el impulso de procesos comunitarios. Nacimos inspiradas en iniciativas como el Studio Museum in Harlem, el Museo del Barrio en Nueva York y el Museo Travesti del Perú de Giusepe Camuzano.</p>
         </div>
@@ -76,7 +77,7 @@
                 <a href="#"><img src="img/arrow-right.svg" alt="Flecha derecha"></a>
             </div>
         </div>
-        <!-- Card vacía -->
+        <!-- Card vacía, para que conseguir el diseño no apilado -->
         <div class="card"></div>
         <!-- Card 3 -->
         <div class="card bg-light-red">
@@ -138,38 +139,47 @@
         </article>
         <!-- Cards Equipo -->
         <div class="container">
+            <!-- Equipo 1 -->
             <div class="card-equipo" data-src="img/yeison-f-garcia-lopez.png">
                 <h5 class="big-text">Yeison F. García López</h5>
                 <p>Politólogo e investigador antirracista. Miembro y coordinador de la Asociación Conciencia Afro. Comisario del Festival Conciencia Afro (2016, 2017, 2018 y 2019). Director del Centro Cultural “Espacio Afro”. Mención honorífica en la categoría de Cultura en los Premios Nacionales de Juventud 2022. Finalista de los Premios Mandarache 2022 en la categoría de poesía</p>
             </div>
+            <!-- Equipo 2 -->
             <div class="card-equipo" data-src="img/amal-hussein.png">
                 <h5 class="big-text">Amal Hussein</h5>
                 <p>Graduada en ciencias políticas y gestión pública. Cuenta con experiencia en la incidencia social y política en defensa de los derecho humanos, con especial énfasis en la protección internacional y la erradicación de la mutilación genital femenina. Ahora se incorpora al equipo como directora de programas.</p>
             </div>
+            <!-- Equipo 3 -->
             <div class="card-equipo" data-src="img/lucia-asue-mbomio-rubio.png">
                 <h5 class="big-text">Lucía-Asué Mbomío Rubio</h5>
                 <p>Periodista. Autora de los libros  ‘Hija del camino’ y ‘Las que se atrevieron” (que está en proceso de convertirse en serie de Netflix)  Trabaja como reportera en Tve1 y colabora en medios escritos (El País, Ctxt, Píkara, Mundo Negro…) y en la radio (“La Ventana”, “Hoy por Hoy”...)</p>
             </div>
+            <!-- Equipo 4 -->
             <div class="card-equipo" data-src="img/esther-mayoko-ortega.png">
                 <h5 class="big-text">Esther (Mayoko) Ortega.</h5>
                 <p>Docente universitaria e investigadora. Es profesora en Tufts University y Skidmore College y coordinadora, en el mismo programa universitario, del Laboratorio de Pedagogías Antirracistas Interseccionales. Activista feminista-antirracista y de la disidencia sexual.</p>
             </div>
+            <!-- Equipo 5 -->
             <div class="card-equipo" data-src="img/moha-gerehou.png">
                 <h5 class="big-text">Moha Gerehou</h5>
                 <p>Fue periodista de elDiario.es y actualmente es colaborador en la revista Vogue y otros medios. Ex presidente de SOS Racismo en Madrid. Experto en temas de racismo, con análisis en artículos y vídeos. Autor del libro ‘Qué hace un negro como tú en un sitio como este’. Elegido entre los 'European Young Leaders 2020'.</p>
             </div>
+            <!-- Equipo 6 -->
             <div class="card-equipo" data-src="img/ana-bibang.jpg">
                 <h5 class="big-text">Ana Bibang</h5>
                 <p>Consultora legal, madrileña, afrodescendiente y afrofeminista. Ligada en sus inicios a la cultura Hip Hop y la industria musical del rap en castellano; en la actualidad es asesora en materia de Inmigración, Extranjería y Movilidad Internacional. Escribe la columna "EN MAYÙSCULAS" para la revista CTXT.</p>
             </div>
+            <!-- Equipo 7 -->
             <div class="card-equipo" data-src="img/marisol-saelo.jpg">
                 <h5 class="big-text">Marisol Saelo</h5>
                 <p>Graduada en trabajo social. Funcionaria de carrera. Experta en violencia de genero. Reconocida por la Comunidad de Madrid por su labor contra la violencia de genero en el año 2019.</p>
             </div>
+            <!-- Equipo 8 -->
             <div class="card-equipo" data-src="img/ruben-h-bermudez.png">
                 <h5 class="big-text">Rubén H. Bermúdez</h5>
                 <p>Creativo. Es autor del libro ‘Y tú, ¿por qué eres negro? (2017) y de la película ‘A todos nos gusta el plátano’ (2021). Ahora dice que quiere hacer un videojuego.</p>
             </div>
+        <!-- Imagen para crear el efecto cuando se hace hover sobre la card para que aparezca la imagen -->
         <img src="img/yeison-f-garcia-lopez.png" alt="Yeison F García López" class="hover-img">
         </div>
         <!-- Fin Cards Equipo -->
