--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="icon" href="img/flavicon.ico" type="image/x-icon">
-
     <title>Conciencia Afro</title>
 </head>
 <body class="home-page">
@@ -16,11 +15,15 @@
             <img src="img/Logo-Conciencia-Afro.svg" alt="Logo Conciencia Afro">
         </a>
         <!-- Fin Logo -->
-        <div> 
+        <div>
+            <!-- Inicio Icono menú hamburguesa -->
             <button id="btn_menu" class="btn_menu">
                 <span id="bar1"></span><span id="bar_middle"></span><span id="bar2"></span>
             </button>
+            <!-- Fin Icono menú hamburguesa -->
+            <!-- Call to action -->
             <a href="ayuda.html" class="btn-cta">ÚNETE</a>
+            <!-- Fin Call to action -->
         </div>
     </header>
     <!-- Fin Header -->
@@ -52,6 +55,7 @@
     <!-- Fin Sección Conócenos -->
     <!-- Sección Cards -->
     <section class="cards">
+        <!-- Primera card -->
         <div class="card bg-green">
             <div>
                 <div>
@@ -68,6 +72,7 @@
                 <a href="#"><img src="img/arrow-right.svg" alt="Flecha derecha"></a>
             </div>
         </div>
+        <!-- Segunda Card -->
         <div class="card bg-light-purple">
             <div>
                 <div>
@@ -92,7 +97,6 @@
             <h3 class="big-text">Residencia artística afronteriza 2023</h3>
             <a href="resistencia.html" class="btn">Saber más</a>
         </span>
-
     </section>
     <!-- Fin Sección Texto Grande  -->
     <!-- Sección Contacto -->
@@ -111,17 +115,22 @@
     <!-- Fin Sección Contacto -->
     <!-- Footer --> 
     <footer>
+        <!-- Top Footer -->
         <div class="top-footer bg-yellow">
+            <!-- Logo Footer -->
             <a href="index.html"><img src="img/Logo-Conciencia-Afro.svg" alt="Logo Conciencia Afro"></a>
+            <!-- Direcciones -->
             <div>
                 <p>Estamos en el número 49 de la Calle Cáceres en Madrid</p>
                 <p>Nuestro email es <a href="mailto:hola@conciencia-afro.com">hola@conciencia-afro.com</a></p>
                 <!-- Iconos de redes sociales -->
                 <div class="rrss"><p>Puedes seguirnos en:</p> <a href="https://www.instagram.com/espacioafro/" target="_blank"><img src="img/instagram-icon-afro.png" alt="Icono Instagram"></a><a href="https://twitter.com/EspacioAfro/" target="_blank"><img src="img/twitter-icon-afro.png" alt="Icono Twitter"></a></div>
                 <!-- Fin Iconos de redes sociales -->
+                <!-- Link que abre el pop-up de Newsletter -->
                 <p>O <a href="#" id="OpenModalNewsletter">suscribirte a nuestra newsletter</a> para enterarte de todo</p>
             </div>
         </div>
+        <!-- Buttom footer -->
         <div class="buttom-footer">
             <p><b>CONCIENCIA-AFRO © 2016-2023</b></p>
             <div class="legal">
