--- a/resistencia.html
+++ b/resistencia.html
@@ -14,7 +14,6 @@
         <a href="index.html" class="logo">
             <img src="img/Logo-Conciencia-Afro.svg" alt="Logo Conciencia Afro">
         </a>
-        
         <!-- Fin Logo -->
         <div> 
             <button id="btn_menu" class="btn_menu">
@@ -26,11 +25,13 @@
     <!-- Fin Header -->
     <!-- Sección Introducción Resistencia -->
     <section class="section-black">
+        <!-- Contenedor título con imagen y anclas -->
         <div>
             <h1>RESISTENCIA AFROFRONTERIZA 2023</h1>
             <a href="#proyectos-resistencia" class="btn">Proyectos desarrollados</a>
             <img src="img/residencia-espacio-afro.png" alt="Equipo Residencia Espacio Afro">
         </div>
+        <!-- Contenedor con texto -->
         <div>
             <p>Un programa de creación en residencia que acompaña proyectos de creación artística que trabajan en torno a los conceptos de comunidad, cuerpo y memoria. El programa propone habitar lo afronterizo como un concepto colectivo a construir a partir de la experiencia del compartir juntas, tiempos de escucha, investigación, experimentación y vida.</p>
             <ul><p>Nuestras residentes son:</p>
