tablet responsive, improve css

--- a/conocenos.html
+++ b/conocenos.html
@@ -78,7 +78,7 @@
             </div>
         </div>
         <!-- Card vacía, para que conseguir el diseño no apilado -->
-        <div class="card"></div>
+        <div class="card card-vacia"></div>
         <!-- Card 3 -->
         <div class="card bg-light-red">
             <div>
@@ -112,7 +112,7 @@
             </div>
         </div>
         <!-- Card Vacía -->
-        <div class="card"></div>
+        <div class="card card-vacia"></div>
         <!-- Card 5 -->
         <div class="card bg-light-purple">
             <div>
